crates/pvm-contract-macros/tests/ui/receive_with_args.stderr
error: `#[receive]` must take no arguments other than `&mut self`
 --> tests/ui/receive_with_args.rs:7:9
  |
7 | /         #[pvm_contract_macros::receive]
8 | |         pub fn receive(&mut self, _value: u64) {}
  | |_________________________________________________^
